Fix fixed header z-index

--- a/nexaas-app/app/assets/less/partials/_header.less
+++ b/nexaas-app/app/assets/less/partials/_header.less
@@ -14,8 +14,8 @@
     top: 0;
     right: 0;
     width: calc(~'100% - 85px');
-    box-shadow: 0px 1px 3px rgba(160, 160, 160, 0.2)
-    z-index: 99;
+    box-shadow: 0px 1px 3px rgba(160, 160, 160, 0.2);
+    z-index: 2;
   }
 }
 
